修改分页bug,调整md格式

--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -11,9 +11,9 @@
             <span>&laquo;</span>
         {% else %}
             {% if paginator.previous_page == 1 %}
-            <a href="/Jasonpage/">
+            <a href="/">
             {% else %}
-            <a href="/Jasonpage{{ paginator.previous_page }}" >
+            <a href="{{ paginator.previous_page_path | prepend: site.url | replace: '//', '/' }}" >
             {% endif %}
                 <span>&laquo;</span>
             </a>
@@ -28,7 +28,7 @@
             {% if i == 1 %}
             <a href="/" data-hover="{{i}}">{{i}}</a>
             {% else %}
-            <a href="/Jasonpage{{i}}" data-hover="{{i}}">{{i}}</a>
+            <a href="{{ site.paginate_path | prepend: site.url | replace: '//', '/' | replace: ':num', page }}" data-hover="{{i}}">{{i}}</a>
             {% endif %}
         </li>
         {% endfor %}
@@ -36,13 +36,13 @@
             {% if paginator.page == paginator.total_pages %}
             <span>&raquo;</span>
             {% else %}
-            <a href="/Jasonpage{{ paginator.next_page }}" data-hover="&raquo;">
+            <a href="{{ paginator.next_page_path | prepend: site.url | replace: '//', '/' }}" data-hover="&raquo;">
                 <span>&raquo;</span>
             </a>
             {% endif %}
         </li>
         <li>
-            <a href="/Jasonpage{{paginator.total_pages}}" data-hover="末页">
+            <a href="{{ site.paginate_path | prepend: site.url | replace: '//', '/' | replace: ':num', paginator.total_pages }}" data-hover="末页">
                 <span>末页</span>
             </a>
         </li>
